[build-system]
requires = ["setuptools", "wheel", "pybind11"]

[tool.black]
line-length = 88
target_version = ['py38', 'py39', 'py310']
experimental_string_processing = true
exclude = """
/(
    \\.eggs         # exclude a few common directories in the
  | \\.git          # root of the project
  | \\.mypy_cache
  | \\.vscode
  | examples
  | build
  | dist
  | doc/tutorial
  | doc/_build
  | doc/auto_examples
)/
"""

[tool.coverage.run]
omit = ["setup.py", ]
branch = true
parallel = true
concurrency = ["multiprocessing", ]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "only on win32",
    "sys.platform == 'win32'",
]
