[bdist_wheel]
universal = true

[metadata]
name = scikit-hubness
version = attr: skhubness.__version__
author = Roman Feldbauer
author_email = sci@feldbauer.org
maintainer=Roman Feldbauer
maintainer_email=sci@feldbauer.org
url = https://github.com/VarIr/scikit-hubness
description = Hubness reduction and analysis tools
long_description = file: README.md
long_description_content_type = text/markdown
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt
platform = any
keywords =
    machine-learning
    high-dimensional-data
    hubness
    nearest-neighbor
    data-science
    data-mining
    artificial-intelligence

# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence

project_urls =
    Bug Tracker   = https://github.com/VarIr/scikit-hubness/issues
    Changelog     = https://github.com/VarIr/scikit-hubness/docs/changelog.md
    Documentation = https://scikit-hubness.readthedocs.io
    Say Thanks!   = https://saythanks.io/to/VarIr
    Source        = https://github.com/VarIr/scikit-hubness

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
packages = find:
test_suite = tests
install_requires =
    numpy                    # These packages will be installed by pip.
    scipy >= 1.2             # For comparison with requirements.txt see also:
    scikit-learn >= 0.22     # https://packaging.python.org/en/latest/requirements.html
    tqdm
    joblib >= 0.12
    numba

[options.extras_require]
ann =
    annoy
    ngt!=1.14.1; platform_system == "Linux" or platform_system == "Darwin"
    nmslib
tests =
    codecov
    flake8
    pytest
    pytest-cov

[options.package_data]
* = *.data, *.labels
